[package]
name = "async-imap-lite-demo-smol"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"

[[bin]]
name = "aws_workmail"
path = "src/aws_workmail.rs"

[[bin]]
name = "gmail"
path = "src/gmail.rs"

[dependencies]
async-imap-lite = { path = "../..", version = "0.1", features = ["async_tls"] }
async-io = "0.1.7"
futures-lite = "0.1.10"
